partial/force-app/main/default/objects/Tenancy__c/Tenancy__c.object-meta.xml
<CustomObject>
    <label>Tenancy</label>
    <nameField>
        <label>Tenancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>