partial/force-app/main/default/objects/Tenancy__c/fields/Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role__c</fullName>
    <label>Agent Role</label>
    <length>25</length>
    <type>Text</type>
</CustomField>