partial/force-app/main/default/objects/Tenancy__c/fields/End_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Date Confirmed</label>
    <type>Checkbox</type>
</CustomField>