partial/force-app/main/default/objects/Tenancy__c/fields/Is_Periodic__c.field-meta.xml
<CustomField>
    <fullName>Is_Periodic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Periodic</label>
    <type>Checkbox</type>
</CustomField>