partial/force-app/main/default/objects/Tenancy__c/fields/Meter_Reading_Water__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading_Water__c</fullName>
    <label>Meter Reading Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>