partial/force-app/main/default/objects/Tenancy__c/fields/Meter_Reading_Water_Last_Read__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading_Water_Last_Read__c</fullName>
    <label>Meter Reading Water Last Read</label>
    <type>Date</type>
</CustomField>