partial/force-app/main/default/objects/Tenancy__c/fields/Rent_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Frequency__c</fullName>
    <label>Rent Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>