partial/force-app/main/default/objects/Tenancy__c/fields/Rent_Instalments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Instalments_Amount__c</fullName>
    <label>Rent Instalments Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>