partial/force-app/main/default/objects/Tenancy__c/fields/Rent_Instalments_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Instalments_Frequency__c</fullName>
    <label>Rent Instalments Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>