partial/force-app/main/default/objects/Tenancy__c/fields/Rent_Instalments_Start__c.field-meta.xml
<CustomField>
    <fullName>Rent_Instalments_Start__c</fullName>
    <label>Rent Instalments Start</label>
    <type>Date</type>
</CustomField>